MNT #1 remaining objects from SPEC config

--- a/src/id28_c/configs/devices.yml
+++ b/src/id28_c/configs/devices.yml
@@ -11,6 +11,7 @@ apstools.devices.motor_factory.mb_creator:
     roll: m6
     x: m7
     y: m8
+  labels: ["baseline",]
 - name: scmde
   prefix: "28idaSoft:JJ-SCM:"
   motors:
@@ -18,6 +19,7 @@ apstools.devices.motor_factory.mb_creator:
     y: m2
     th: m3
     ch: m4
+  labels: ["baseline",]
 - name: scmf
   prefix: "28idaSoft:JJ-SCM:"
   motors:
@@ -25,6 +27,7 @@ apstools.devices.motor_factory.mb_creator:
     y: m6
     th: m7
     ch: m8
+  labels: ["baseline",]
 - name: scmg
   prefix: "28idaSoft:JJ-SCM:"
   motors:
@@ -32,6 +35,7 @@ apstools.devices.motor_factory.mb_creator:
     y: m10
     th: m11
     ch: m12
+  labels: ["baseline",]
 - name: sl2  # Some known slit controller?
   prefix: "28ida:SL-2:"
   motors:
@@ -39,6 +43,7 @@ apstools.devices.motor_factory.mb_creator:
     hsiz: hSize
     vcen: vCenter
     vsiz: vSize
+  labels: ["baseline",]
 - name: slb
   prefix: "28ida:"
   motors:
@@ -47,6 +52,7 @@ apstools.devices.motor_factory.mb_creator:
     o: m30
     i: m31
     foil: m32
+  labels: ["baseline",]
 - name: sld
   prefix: "28ida:"
   motors:
@@ -55,6 +61,7 @@ apstools.devices.motor_factory.mb_creator:
     o: m11
     i: m12
     foil: m13
+  labels: ["baseline",]
 - name: slf
   prefix: "28ida:"
   motors:
@@ -63,6 +70,7 @@ apstools.devices.motor_factory.mb_creator:
     o: m16
     i: m17
     foil: m18
+  labels: ["baseline",]
 - name: slg
   prefix: "28ida:"
   motors:
@@ -71,6 +79,7 @@ apstools.devices.motor_factory.mb_creator:
     o: m21
     i: m22
     foil: m23
+  labels: ["baseline",]
 
 apsbits.utils.sim_creator.predefined_device:
 - { creator: ophyd.sim.motor, name: sim_motor }
@@ -110,11 +119,6 @@ hklpy2.creator:
 #   prefix: ioc:Slit1
 #   labels: ["slits", "baseline"]
 
-# hkl.SimulatedE4CV:
-# - name: sim4c
-#   prefix: ""
-#   labels: ["diffractometer"]
-
 # ophyd.scaler.ScalerCH:
 # - name: scaler1
 #   prefix: vme:scaler1
@@ -141,3 +145,38 @@ hklpy2.creator:
 #           write_path_template: "/path/to/ioc/tmp/"
 #       - roi1
 #       - stats1
+
+ophyd.EpicsSignal:
+- name: I0
+  prefix: "28idaSoft:LJT702:Ai0"
+  labels: ["detectors",]
+- name: labj0
+  prefix: "28idaSoft:LJT701:Ai0"
+  labels: ["detectors",]
+- name: labj2
+  prefix: "28idaSoft:LJT701:Ai2"
+  labels: ["detectors",]
+- name: pind
+  prefix: "28idaSoft:LJT702:Ai2"
+  labels: ["detectors",]
+- name: pind_AB
+  prefix: "28idaSoft:userCalc1.VAL"
+  labels: ["detectors",]
+- name: t2top  # TetrAMM "28idTetra:QUAD2:"
+  prefix: "28idTetra:QUAD2:Current2:MeanValue_RBV"
+  labels: ["detectors",]
+- name: t2bot
+  prefix: "28idTetra:QUAD2:Current4:MeanValue_RBV"
+  labels: ["detectors",]
+- name: tmm1_1  # TetrAMM "28idTetra:QUAD1:"
+  prefix: "28idTetra:QUAD1:Current1:MeanValue_RBV"
+  labels: ["detectors",]
+- name: tmm1_2
+  prefix: "28idTetra:QUAD1:Current2:MeanValue_RBV"
+  labels: ["detectors",]
+- name: tmm1_3
+  prefix: "28idTetra:QUAD1:Current3:MeanValue_RBV"
+  labels: ["detectors",]
+- name: tmm1_4
+  prefix: "28idTetra:QUAD1:Current4:MeanValue_RBV"
+  labels: ["detectors",]
