MNT #1 as-delivered

--- a/src/id28_c/configs/devices.yml
+++ b/src/id28_c/configs/devices.yml
@@ -1,86 +1,5 @@
 # Guarneri-style device YAML configuration
 
-apstools.devices.motor_factory.mb_creator:
-- name: idt
-  prefix: "28idaSoft:IDT-DCM:"
-  motors:
-    brag: m1
-    gap: m2
-    bv: m3  # beamViewer
-    pit: m5  # pitch
-    roll: m6
-    x: m7
-    y: m8
-  labels: ["baseline",]
-- name: scmde
-  prefix: "28idaSoft:JJ-SCM:"
-  motors:
-    x: m1
-    y: m2
-    th: m3
-    ch: m4
-  labels: ["baseline",]
-- name: scmf
-  prefix: "28idaSoft:JJ-SCM:"
-  motors:
-    x: m5
-    y: m6
-    th: m7
-    ch: m8
-  labels: ["baseline",]
-- name: scmg
-  prefix: "28idaSoft:JJ-SCM:"
-  motors:
-    x: m9
-    y: m10
-    th: m11
-    ch: m12
-  labels: ["baseline",]
-- name: sl2  # Some known slit controller?
-  prefix: "28ida:SL-2:"
-  motors:
-    hcen: hCenter
-    hsiz: hSize
-    vcen: vCenter
-    vsiz: vSize
-  labels: ["baseline",]
-- name: slb
-  prefix: "28ida:"
-  motors:
-    b: m28
-    t: m29
-    o: m30
-    i: m31
-    foil: m32
-  labels: ["baseline",]
-- name: sld
-  prefix: "28ida:"
-  motors:
-    b: m9
-    t: m10
-    o: m11
-    i: m12
-    foil: m13
-  labels: ["baseline",]
-- name: slf
-  prefix: "28ida:"
-  motors:
-    b: m14
-    t: m15
-    o: m16
-    i: m17
-    foil: m18
-  labels: ["baseline",]
-- name: slg
-  prefix: "28ida:"
-  motors:
-    b: m19
-    t: m20
-    o: m21
-    i: m22
-    foil: m23
-  labels: ["baseline",]
-
 apsbits.utils.sim_creator.predefined_device:
 - { creator: ophyd.sim.motor, name: sim_motor }
 - { creator: ophyd.sim.noisy_det, name: sim_det }
@@ -89,25 +8,7 @@ apstools.devices.SimulatedApsPssShutterWithStatus:
 - name: shutter
   labels: [ "shutters", "baseline" ]
 
-hklpy2.creator:
-- name: simfourc
-  geometry: E4CV
-  labels: [ "diffractometer", "hklpy2" ]
-- name: simpsic
-  geometry: E6C
-  labels: [ "diffractometer", "hklpy2" ]
-  # prefix: "zgp:"  # FIXME use correct PVs
-  # reals:
-  #   # MUST provide in canonical order
-  #   # No defined motor assignments, pick different than fourc (m29-32)
-  #   mu: m23
-  #   eta: m24
-  #   chi: m25
-  #   phi: m26
-  #   nu: m27
-  #   delta: m28
-
-## THIS ARE EXAMPLES OF OTHER DEVICES THAT YOU CAN USE
+## EXAMPLES OF OTHER DEVICES THAT YOU CAN USE
 # ophyd.Signal:
 # - name: test
 #   value: 50.7
@@ -145,38 +46,3 @@ hklpy2.creator:
 #           write_path_template: "/path/to/ioc/tmp/"
 #       - roi1
 #       - stats1
-
-ophyd.EpicsSignal:
-- name: I0
-  prefix: "28idaSoft:LJT702:Ai0"
-  labels: ["detectors",]
-- name: labj0
-  prefix: "28idaSoft:LJT701:Ai0"
-  labels: ["detectors",]
-- name: labj2
-  prefix: "28idaSoft:LJT701:Ai2"
-  labels: ["detectors",]
-- name: pind
-  prefix: "28idaSoft:LJT702:Ai2"
-  labels: ["detectors",]
-- name: pind_AB
-  prefix: "28idaSoft:userCalc1.VAL"
-  labels: ["detectors",]
-- name: t2top  # TetrAMM "28idTetra:QUAD2:"
-  prefix: "28idTetra:QUAD2:Current2:MeanValue_RBV"
-  labels: ["detectors",]
-- name: t2bot
-  prefix: "28idTetra:QUAD2:Current4:MeanValue_RBV"
-  labels: ["detectors",]
-- name: tmm1_1  # TetrAMM "28idTetra:QUAD1:"
-  prefix: "28idTetra:QUAD1:Current1:MeanValue_RBV"
-  labels: ["detectors",]
-- name: tmm1_2
-  prefix: "28idTetra:QUAD1:Current2:MeanValue_RBV"
-  labels: ["detectors",]
-- name: tmm1_3
-  prefix: "28idTetra:QUAD1:Current3:MeanValue_RBV"
-  labels: ["detectors",]
-- name: tmm1_4
-  prefix: "28idTetra:QUAD1:Current4:MeanValue_RBV"
-  labels: ["detectors",]
