MNT #4 use hklpy2.misc.VirtualPositionerBase

--- a/src/id28_c/configs/devices_sixcidc.yml
+++ b/src/id28_c/configs/devices_sixcidc.yml
@@ -1,4 +1,4 @@
-# Diffractometers used by sixcidc configuration
+# Diffractometers with sixcidc geometry.
 
 id28_common.devices.sixc_geometry.Sixc:
 - name: sixcidc
