--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ classifiers = []
 # https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#license
 license = "LicenseRef-ANL-Open-Source-License"
 license-files = ["LICEN[CS]E*"]
-dependencies = [ "apsbits", "hklpy2" ]
+dependencies = [ "apsbits", "hklpy2 >=0.1.4" ]
 
 authors = [
     { name = "Eric Codrea", email = "ecodrea@anl.gov" },
